--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Scales.com</title>
 	<meta name="viewport" content="width=device-width", initial-scale=1.0">
 	<link rel="stylesheet" href="style/style.css">
-	<link rel="icon" href="img/"/>
+	<link rel="icon" href="img/note.ico"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;1,100&display=swap" rel ="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
