main style is pretty done everything is aligned like it should be

--- a/index.html
+++ b/index.html
@@ -18,66 +18,52 @@
 	</header>
 	<main>
 		<div class="circlesWrapper">
-			<div class="key">
-				<div class="circle root"></div>
-			</div>
-			<div class="second">
-				<div class="circle minor2"></div>
-				<div class="circle major2"></div>
-			</div>
-			<div class="third">
-				<div class="circle minor3"></div>
-				<div class="circle major3"></div>
-			</div>
-			<div class="forth">
-				<div class="circle diminished4"></div>
-				<div class="circle perfect4"></div>
-				<div class="circle augmented4"></div>
-			</div>
-			<div class="fifth">
-				<div class="circle diminished5"></div>
-				<div class="circle perfect5"></div>
-				<div class="circle augmented5"></div>
-			</div>
-			<div class="sixth">
-				<div class="circle minor6"></div>
-				<div class="circle major6"></div>
-			</div>
-			<div class="seventh">
-				<div class="circle minor7"></div>
+			<div class="circle root"></div>
+			<div class="circle minor2"></div>
+			<div class="circle major2"></div>
+			<div class="circle minor3"></div>
+			<div class="circle major3"></div>
+			<div class="circle diminished4"></div>
+			<div class="circle perfect4"></div>
+			<div class="circle augmented4"></div>
+			<div class="circle diminished5"></div>
+			<div class="circle perfect5"></div>
+			<div class="circle augmented5"></div>
+			<div class="circle minor6"></div>
+			<div class="circle major6"></div>
+			<div class="circle minor7"></div>
 			<div class="circle major7"></div>
-			</div>
-			<div class="eigth">
-				<div class="circle octave"></div>
-			</div>
+			<div class="circle octave"></div>
 		</div>
+		<h2 class="keyTitle">Pick a key</h2>
 		<div class="keyPick">
-			<button class="keyA">A</button>
-			<button class="keyASharp">A#/Bb</button>
-			<button class="keyB">B</button>
-			<button class="keyC">C</button>
-			<button class="keyCSharp">C#/Db</button>
-			<button class="keyD">D</button>
-			<button class="keyDSharp">D#/Eb</button>
-			<button class="keyE">E</button>
-			<button class="keyF">F</button>
-			<button class="keyFSharp">F#/Gb</button>
-			<button class="keyG">G</button>
-			<button class="keyGSharp">G#/Ab</button>
+			<button class="key" id="keyA">A</button>
+			<button class="key" id="keyASharp">A#/Bb</button>
+			<button class="key" id="keyB">B</button>
+			<button class="key" id="keyC">C</button>
+			<button class="key" id="keyCSharp">C#/Db</button>
+			<button class="key" id="keyD">D</button>
+			<button class="key" id="keyDSharp">D#/Eb</button>
+			<button class="key" id="keyE">E</button>
+			<button class="key" id="keyF">F</button>
+			<button class="key" id="keyFSharp">F#/Gb</button>
+			<button class="key" id="keyG">G</button>
+			<button class="key" id="keyGSharp">G#/Ab</button>
 		</div>
+		<h2 class="modeTitle">Pick a mode</h2>
 		<div class="modePick">
-			<button class="modeIonian modeMajor">Ionian</button>
-			<button class="modeLydian modeMajor">Lydian</button>
-			<button class="modeMixolydian modeMajor">Mixolydian</button>
-			<button class="modeDorian modeMinor">Dorian</button>
-			<button class="modePhrygian modeMinor">Phrygian</button>
-			<button class="modeAeolian modeMinor">Aeolian</button>
-			<button class="modeLocrian modeMinor">Locrian</button>
+			<button class="mode modeMajor" id="modeIonian">Ionian</button>
+			<button class="mode modeMajor" id="modeLydian">Lydian</button>
+			<button class="mode modeMajor" id="modeMixolydian">Mixolydian</button>
+			<button class="mode modeMinor" id="modeDorian">Dorian</button>
+			<button class="mode modeMinor" id="modePhrygian">Phrygian</button>
+			<button class="mode modeMinor" id="modeAeolian">Aeolian</button>
+			<button class="mode modeMinor" id="modeLocrian">Locrian</button>
 		</div>
 	</main>
 	<footer>
-		<p>This model is based from David Walliman's idea of "Music DNA" he speaks about on Youtube</p>
-		<p>This tool is meant for personal use only, any copy aiming sales is a violation of intellectual property of Mr Walliman</p>
+		<p>This model is based from David Walliman's idea of "Music DNA" he speaks about on Youtube.
+		</br>This tool is meant for personal use only, any copy aiming sales is a violation of intellectual property of Mr Walliman.</p>
 	</footer>
 </body>
 </html>
