fix : display with more colors and deleted lifeless elements

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 	</header>
 	<main>
 		<div class="circlesWrapper">
-			<div class="circle root"></div>
-			<div class="circle minor2"></div>
-			<div class="circle major2"></div>
-			<div class="circle minor3"></div>
-			<div class="circle major3"></div>
-			<div class="circle diminished4"></div>
-			<div class="circle perfect4"></div>
-			<div class="circle augmented4"></div>
-			<div class="circle diminished5"></div>
-			<div class="circle perfect5"></div>
-			<div class="circle augmented5"></div>
-			<div class="circle minor6"></div>
-			<div class="circle major6"></div>
-			<div class="circle minor7"></div>
-			<div class="circle major7"></div>
-			<div class="circle octave"></div>
+			<div class="circle root">R</div>
+			<div class="circle minor2">m2</div>
+			<div class="circle major2">M2</div>
+			<div class="circle minor3">m3</div>
+			<div class="circle major3">M3</div>
+			<div class="circle diminished4">dim4</div>
+			<div class="circle perfect4">P4</div>
+			<div class="circle augmented4">aug4</div>
+			<div class="circle diminished5">dim5</div>
+			<div class="circle perfect5">P5</div>
+			<div class="circle augmented5">aug5</div>
+			<div class="circle minor6">m6</div>
+			<div class="circle major6">M6</div>
+			<div class="circle minor7">m7</div>
+			<div class="circle major7">M7</div>
+			<div class="circle octave">R8</div>
 		</div>
 		<h2 class="keyTitle">Pick a key</h2>
 		<div class="keyPick">
@@ -62,8 +62,6 @@
 		</div>
 	</main>
 	<footer>
-		<p>This model is based from David Walliman's idea of "Music DNA" he speaks about on Youtube.
-		</br>This tool is meant for personal use only, any copy aiming sales is a violation of intellectual property of Mr Walliman.</p>
 	</footer>
 </body>
 </html>
