--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Scales.com</title>
-	<meta name="viewport" content="width=device-width", initial-scale=1.0">
+	<meta name="viewport" content="width=device-width", initial-scale="1.0">
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="icon" href="img/note.ico"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,50 +18,51 @@
 	</header>
 	<main>
 		<div class="circlesWrapper">
-			<div class="circle root">R</div>
-			<div class="circle minor2">m2</div>
-			<div class="circle major2">M2</div>
-			<div class="circle minor3">m3</div>
-			<div class="circle major3">M3</div>
-			<div class="circle diminished4">dim4</div>
-			<div class="circle perfect4">P4</div>
-			<div class="circle augmented4">aug4</div>
-			<div class="circle diminished5">dim5</div>
-			<div class="circle perfect5">P5</div>
-			<div class="circle augmented5">aug5</div>
-			<div class="circle minor6">m6</div>
-			<div class="circle major6">M6</div>
-			<div class="circle minor7">m7</div>
-			<div class="circle major7">M7</div>
-			<div class="circle octave">R8</div>
+			<div class="circle" id="root"></div>
+			<div class="circle" id="minor2"></div>
+			<div class="circle" id="major2"></div>
+			<div class="circle" id="minor3"></div>
+			<div class="circle" id="major3"></div>
+			<div class="circle" id="diminished4"></div>
+			<div class="circle" id="perfect4"></div>
+			<div class="circle" id="augmented4"></div>
+			<div class="circle" id="diminished5"></div>
+			<div class="circle" id="perfect5"></div>
+			<div class="circle" id="augmented5"></div>
+			<div class="circle" id="minor6"></div>
+			<div class="circle" id="major6"></div>
+			<div class="circle" id="minor7"></div>
+			<div class="circle" id="major7"></div>
+			<div class="circle" id="octave"></div>
 		</div>
 		<h2 class="keyTitle">Pick a key</h2>
 		<div class="keyPick">
-			<button class="key" id="keyA">A</button>
-			<button class="key" id="keyASharp">A#/Bb</button>
-			<button class="key" id="keyB">B</button>
-			<button class="key" id="keyC">C</button>
-			<button class="key" id="keyCSharp">C#/Db</button>
-			<button class="key" id="keyD">D</button>
-			<button class="key" id="keyDSharp">D#/Eb</button>
-			<button class="key" id="keyE">E</button>
-			<button class="key" id="keyF">F</button>
-			<button class="key" id="keyFSharp">F#/Gb</button>
-			<button class="key" id="keyG">G</button>
-			<button class="key" id="keyGSharp">G#/Ab</button>
+			<button class="key" id="keyA" onclick="displayNotes('A')">A</button>
+			<button class="key" id="keyBb" onclick="displayNotes('A#/Bb')">A#/Bb</button>
+			<button class="key" id="keyB" onclick="displayNotes('B')">B</button>
+			<button class="key" id="keyC" onclick="displayNotes('C')">C</button>
+			<button class="key" id="keyDb" onclick="displayNotes('C#/Db')">C#/Db</button>
+			<button class="key" id="keyD" onclick="displayNotes('D')">D</button>
+			<button class="key" id="keyEb" onclick="displayNotes('D#/Eb')">D#/Eb</button>
+			<button class="key" id="keyE" onclick="displayNotes('E')">E</button>
+			<button class="key" id="keyF" onclick="displayNotes('F')">F</button>
+			<button class="key" id="keyGb" onclick="displayNotes('F#/Gb')">F#/Gb</button>
+			<button class="key" id="keyG" onclick="displayNotes('G')">G</button>
+			<button class="key" id="keyAb" onclick="displayNotes('G#/Ab')">G#/Ab</button>
 		</div>
 		<h2 class="modeTitle">Pick a mode</h2>
 		<div class="modePick">
-			<button class="mode modeMajor" id="modeIonian">Ionian</button>
-			<button class="mode modeMajor" id="modeLydian">Lydian</button>
-			<button class="mode modeMajor" id="modeMixolydian">Mixolydian</button>
-			<button class="mode modeMinor" id="modeDorian">Dorian</button>
-			<button class="mode modeMinor" id="modePhrygian">Phrygian</button>
-			<button class="mode modeMinor" id="modeAeolian">Aeolian</button>
-			<button class="mode modeMinor" id="modeLocrian">Locrian</button>
+			<button class="mode modeMajor" id="modeIonian" onclick="displayMode('Ionian')">Ionian</button>
+			<button class="mode modeMajor" id="modeLydian" onclick="displayMode('Lydian')">Lydian</button>
+			<button class="mode modeMajor" id="modeMixolydian" onclick="displayMode('Mixolydian')">Mixolydian</button>
+			<button class="mode modeMinor" id="modeDorian" onclick="displayMode('Dorian')">Dorian</button>
+			<button class="mode modeMinor" id="modePhrygian" onclick="displayMode('Phrygian')">Phrygian</button>
+			<button class="mode modeMinor" id="modeAeolian" onclick="displayMode('Aeolian')">Aeolian</button>
+			<button class="mode modeMinor" id="modeLocrian" onclick="displayMode('Locrian')">Locrian</button>
 		</div>
 	</main>
 	<footer>
 	</footer>
+	<script src="./js/app.js"></script>
 </body>
 </html>
